# USDA-Vision-Cameras

./: .gitignore  CAMERA_CONFIG_API.md  PROJECT_COMPLETE.md  README.md  api-endpoints.http  api-tests.http  camera_status_test.ipynb  check_time.py  config.json  container_init.sh  convert_avi_to_mp4.sh  demo_mqtt_console.py  main.py  mqtt_publisher_test.py  pyproject.toml  reindex_videos.py  requirements.txt  run_auto_recorder.py  setup_service.sh  setup_timezone.sh  start_system.sh  start_system.sh.backup  test_auto_recording_simple.py  test_standalone_auto_recorder.py  test_system.py  test_video_streaming.html  usda-vision-camera.service
ai_agent/: README.md
ai_agent/references/: api-endpoints.http  api-tests.http  streaming-api.http
camera_sdk/: README.md
demos/: cv_grab.py
docs/: API_DOCUMENTATION.md  README.md  VIDEO_STREAMING.md
docs/api/: CAMERA_CONFIG_API.md
old tests/: camera_capture.py  camera_status_test.ipynb  camera_test_setup.ipynb  main.py  test_exposure.py
tests/: test_api_changes.py  test_mqtt_events_api.py  test_timezone.py
tests/api/: test_camera_recovery_api.py
tests/camera/: test_max_fps.py
tests/core/: check_time.py
tests/integration/: test_system.py
tests/legacy_tests/: camera_video_recorder.py
tests/mqtt/: test_mqtt_logging.py
tests/recording/: test_auto_recording.py  test_auto_recording_mqtt.py  test_auto_recording_simple.py
usda_vision_system/: __init__.py  __main__.py  main.py
usda_vision_system/api/: __init__.py  models.py  server.py
usda_vision_system/camera/: __init__.py  manager.py  monitor.py  recorder.py  (+2 more)
(+51 files in other folders)
